# aws-mwaa-local-runner

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Makefile  README.md  mwaa-local-env  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  sync.yml
dags/: check_environment.py  example_dag_with_taskflow_api.py  example_lambda.py  example_redshift_data_execute_sql.py
docker/: Dockerfile
docker/config/: .env.localrunner  webserver_config.py
docker/script/: bootstrap.sh  entrypoint.sh  run-startup.sh  shell-launch-script.sh  systemlibs.sh  verification.sh
plugins/: README.md
requirements/: requirements.txt
startup_script/: startup.sh
